--- a/css/style-mod.css
+++ b/css/style-mod.css
@@ -1,6 +1,6 @@
 * {
     font-family: 'Playfair Display', serif;
-    
+    border-radius: 0;
 }
 
 #navegador {
@@ -19,10 +19,12 @@ header {
     width: 100%;
     z-index: 1;
     margin: auto;
+    background-color: #f3edc9;
+    border-radius: 0;
 }
 
-h1 {
-    margin-top: 3rem;
+h1#main-title {
+    margin-top: 6rem;
     text-align: center;
 }
 
@@ -161,7 +163,7 @@ b {
             .navbar-div-ul {
                 justify-content: center;
                 padding: 1rem;
-                background-color: beige;
+                background-color: #f5f5dc;
                 border-radius: 0;
             }
 
@@ -269,9 +271,191 @@ b {
         font-size: 24px;
     }
 
+    .bi-cart2 {
+        font-size: 26px;
+    }
+
+    .btn {
+        border: 1px solid rgba(178, 170, 170, 0.294);
+    }
+
+    li.nav-item {
+        width: 100%;
+        height: 100%;
+    }
+
+    li.nav-item:hover {
+        background-color: #d6d0ad;
+        border-radius: 0;
+        transition: 0.3s;
+    }
+
+    #input-email-user, #input-email-user {
+        width: 80%;
+        height: 70px;
+    }
+
+/********************************************************************************************************************/
+
+/* Codigo wizzard register */
+
+body {
+    background: #eee
+}
 
 
+h1 {
+    text-align: center
+}
+
+input {
+    padding: 10px;
+    width: 100%;
+    font-size: 17px;
+    font-family: Raleway;
+    border: 1px solid #aaaaaa
+}
+
+input.invalid {
+    background-color: #ffdddd
+}
+
+.tab {
+    display: none
+}
+
+button {
+    background-color: #4CAF50;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 17px;
+    font-family: Raleway;
+    cursor: pointer
+}
+
+button:hover {
+    opacity: 0.8
+}
+
+#prevBtn {
+    background-color: #bbbbbb
+}
+
+.step {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbbbbb;
+    border: none;
+    border-radius: 50%;
+    display: inline-block;
+    opacity: 0.5
+}
+
+.step.active {
+    opacity: 1
+}
+
+.step.finish {
+    background-color: #4CAF50
+}
+
+.all-steps {
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 30px
+}
+
+.thanks-message {
+    display: none
+}
+
+.container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 
 
+/* Hide the browser's default radio button */
+
+.container input[type="radio"] {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
 
 
+/* Create a custom radio button */
+
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 50%;
+}
+
+
+/* On mouse-over, add a grey background color */
+
+.container:hover input~.checkmark {
+    background-color: #ccc;
+}
+
+
+/* When the radio button is checked, add a blue background */
+
+.container input:checked~.checkmark {
+    background-color: #2196F3;
+}
+
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+
+/* Show the indicator (dot/circle) when checked */
+
+.container input:checked~.checkmark:after {
+    display: block;
+}
+
+
+/* Style the indicator (dot/circle) */
+
+.container .checkmark:after {
+    top: 9px;
+    left: 9px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: white;
+}
+
+#nextprevious {
+    width: 100%;
+}
+
+#nextprevious button {
+    width: 70px;
+}
+
+btn:active, btn-primary:active {
+    --bs-btn-active-bg: #EEEEEE;
+}
