--- a/css/style-mod.css
+++ b/css/style-mod.css
@@ -130,13 +130,13 @@ b {
 }
 
 .btn-mod-login, #chart-btn {
-    padding: 1.5rem;
+    padding: 0.4rem;
     font-size: 20px;
 }
 
 .btn-mod-login {
     width: 40%;
-    padding: 1.8rem;
+    padding: 0.7rem;
     font-size: 20px;
 }
 
@@ -290,6 +290,13 @@ b {
         border: 1px solid rgba(178, 170, 170, 0.294);
     }
 
+    button:disabled.btn,
+    button[disabled]{
+    border: 1px solid #999999;
+    background-color: #cccccc;
+    color: #666666;
+    }
+
     li.nav-item {
         width: 100%;
         height: 100%;
@@ -301,7 +308,7 @@ b {
         transition: 0.3s;
     }
 
-    #input-email-user, #input-email-user {
+    #input-email-user, #input-password-user {
         width: 80%;
         height: 70px;
     }
